multer error fix done

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,10 +1,22 @@
 {
-    "version": 2,
-    "name": "e-shop-tutorial",
-    "builds": [
-       { "src": "server.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-       { "src": "/(.*)", "dest": "/server.js" }
-    ]
+   "version": 2,
+   "builds": [
+     {
+       "src": "server.js",
+       "use": "@vercel/node"
+     }
+   ],
+   "routes": [
+     {
+       "src": "/(.*)",
+       "dest": "/server.js"
+     }
+   ],
+   "env": {
+     "UPLOADS_DIR": "uploads"
+   },
+   "files": [
+     "uploads/**"
+   ]
  }
+ 
