Best selling page bug fixed done

--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,7 +1,7 @@
 PORT = 
 DB_URL = 
-JWT_SECRET_KEY =
-JWT_EXPIRES = 
+JWT_SECRET_KEY = "2FxXT1NTf2K1Mo4i6AOvtdI"
+JWT_EXPIRES = 7d
 ACTIVATION_SECRET = 
 SMPT_HOST = 
 SMPT_PORT = 
