--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,11 +1,11 @@
 PORT = 8000
-DB_URL = "mongodb+srv://shahriarsajeeb:e-shop1234@cluster0.6dckvfx.mongodb.net/test"
+DB_URL = Enter your Db url
 JWT_SECRET_KEY = "dfbkjgflseiia3948943954wfsdchsgfuw#%#%"
 JWT_EXPIRES = 7d
 ACTIVATION_SECRET = hfskjdweuiwe093$wew$@%W!Edfonoddfi
 SMPT_HOST = smtp.gmail.com
 SMPT_PORT = 465
-SMPT_PASSWORD = avhwhjzdmwqnbdbm
-SMPT_MAIL = support@becodemy.com
+SMPT_PASSWORD = Enter  your app password
+SMPT_MAIL = Enter your mail
 
 
