--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,11 +1,11 @@
 PORT = 8000
-DB_URL = Enter your Db url
+DB_URL = enter your db url
 JWT_SECRET_KEY = "dfbkjgflseiia3948943954wfsdchsgfuw#%#%"
 JWT_EXPIRES = 7d
 ACTIVATION_SECRET = hfskjdweuiwe093$wew$@%W!Edfonoddfi
 SMPT_HOST = smtp.gmail.com
 SMPT_PORT = 465
-SMPT_PASSWORD = Enter  your app password
-SMPT_MAIL = Enter your mail
-
-
+SMPT_PASSWORD = enter your SMPT_PASSWORD
+SMPT_MAIL = enter your smpt mail
+STRIPE_API_KEY = enter your stripe api key
+STRIPE_SECRET_KEY = enter your stripe secret key
