--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "stripe": "^12.0.0"
   }
 }
